[gd_scene load_steps=2 format=3 uid="uid://b6m6whsl7rckf"]

[ext_resource type="Script" path="res://src/Extensions/Audia/Elements/MusicButton/MusicEntry.gd" id="1"]

[node name="MusicEntry" type="PanelContainer"]
custom_minimum_size = Vector2(200, 70)
offset_right = 200.0
offset_bottom = 70.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.309804)
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Options"]
layout_mode = 2

[node name="Path3D" type="Label" parent="Panel/Options/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
text = "Path3D"
clip_text = true
max_lines_visible = 2

[node name="Close" type="Button" parent="Panel/Options/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Options/HBoxContainer2"]
layout_mode = 2
text = "Play on Tag: "

[node name="Identifier" type="LineEdit" parent="Panel/Options/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "treats a tag with this name as an audio clip"
placeholder_text = "Identifier (Use Tag name)"
caret_blink = true
caret_blink_interval = 0.5

[connection signal="pressed" from="Panel/Options/HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="text_changed" from="Panel/Options/HBoxContainer2/Identifier" to="." method="_on_Identifier_text_changed"]
